Fix selector name for better text readability

--- a/assets/app.css
+++ b/assets/app.css
@@ -26,7 +26,7 @@
   align-items: center;
 }
 
-.spacer__preview span {
+.app__preview span {
   display: block;
   padding: 8px 12px;
   background-color: var(--color-primary-background);
